--- a/UI/login.html
+++ b/UI/login.html
@@ -21,7 +21,7 @@
                 <input class="input" type="email" id="email" placeholder="email" required>
                 <label class="label" for="input">password</label>
                 <input class="input" type="password" id="password" placeholder="password" required>
-                <button>Login</button>
+                <button onclick="open_modal()">Login</button>
             </form>
             <div class="login-extra">
                 <a href="./sign-up.html" class="btn">Create an Account</a>
@@ -29,5 +29,22 @@
             </div>
         </div>
     </div>
+    <!-- The Modal -->
+<div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+    <span class="close">&times;</span>
+      <p>Select User Type..</p>
+      <select id="ddlViewBy">
+        <option value="User" selected>User</option>
+        <option value="Admin">Admin</option>
+        <option value="Politician">Politician</option>
+      </select>
+      <button onclick="close_modal()">Goto Page</button>
+    </div>
+  
+  </div>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
