--- a/UI/login.html
+++ b/UI/login.html
@@ -24,7 +24,7 @@
                 <button onclick="open_modal()">Login</button>
             </form>
             <div class="login-extra">
-                <a href="./sign-up.html" class="btn">Create an Account</a>
+                <a href="./register.html" class="btn">Create an Account</a>
                 <a href="./reset-password.html">forgot password</a>
             </div>
         </div>
