rename login.html to index.html [delivers 163634427]

--- a/UI/reset-password.html
+++ b/UI/reset-password.html
@@ -23,7 +23,7 @@
         </form>
         <div class="login-extra">
             <p>Reset link is sent to your email</p>
-            <a href="./login.html">Login page</a>
+            <a href="./index.html">Login page</a>
         </div>
     </div>
 </div>
