rename login.html to index.html [delivers 163634427]

--- a/UI/register.html
+++ b/UI/register.html
@@ -36,11 +36,11 @@
                 <input class="input" type="password" id="password" 
                 placeholder="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" 
                 title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
-                <button onclick="add()">Create Account</button>
+                <button>Create Account</button>
             </form>   
 
             <span>have an account?</span>
-            <a href="./login.html" class="btn">Login Page</a>
+            <a href="./index.html" class="btn">Login Page</a>
         </div>
     </div>
 </body>
