create a list of   all politicians running for a specific government office [delivers 163550587]

--- a/UI/user/candidates.html
+++ b/UI/user/candidates.html
@@ -12,16 +12,16 @@
 <body>
     <nav>
         <ul>
-            <li class="li"><a href="./candidates.html">Candidates</a></li>
-            <li class="active li"><a href="./index.html">All political Parties</a></li>
+            <li class="active li"><a href="./candidates.html">Candidates</a></li>
+            <li class="li"><a href="./index.html">All political Parties</a></li>
             <li class="li"><a href="#">Vote</a></li>
             <li class="li"><a href="#">Pofile</a></li>
         </ul>
     </nav>
     <ul>
         <details >
-            <summary>A party</summary>
-            <h2>Members</h2>
+            <summary>A Office</summary>
+            <h2>Candidates</h2>
             <ol>
                 <li>A John Doe</li>
                 <li>A Peter Doe</li>
@@ -29,8 +29,8 @@
             </ol>
         </details >
         <details >
-            <summary>B party</summary>
-            <h2>Members</h2>
+            <summary>B Office</summary>
+            <h2>Candidates</h2>
             <ol>
                 <li>B John Doe</li>
                 <li>B Peter Doe</li>
@@ -38,8 +38,8 @@
             </ol>
         </details >
         <details >
-            <summary>C party</summary>
-            <h2>Members</h2>
+            <summary>C Office</summary>
+            <h2>Candidates</h2>
             <ol>
                 <li>C John Doe</li>
                 <li>C Peter Doe</li>
