User can vote only to one politician against a specific government office [delivers 163550761]

--- a/UI/user/vote.html
+++ b/UI/user/vote.html
@@ -12,9 +12,9 @@
 <body>
     <nav>
         <ul>
-            <li class="active li"><a href="./candidates.html">Candidates</a></li>
+            <li class="li"><a href="./candidates.html">Candidates</a></li>
             <li class="li"><a href="./index.html">All political Parties</a></li>
-            <li class="li"><a href="./vote.html">Vote</a></li>
+            <li class="active li"><a href="./vote.html">Vote</a></li>
             <li class="li"><a href="#">Pofile</a></li>
         </ul>
     </nav>
@@ -23,29 +23,20 @@
             <summary>A Office</summary>
             <h2>Candidates</h2>
             <ol>
-                <li>A John Doe</li>
-                <li>A Peter Doe</li>
-                <li>A James Doe</li>
+                <li>A John Doe <button>vote</button></li>
+                <li>A Peter Doe <button>vote</button></li>
+                <li>A James Doe <button>vote</button></li>
             </ol>
         </details >
         <details >
             <summary>B Office</summary>
             <h2>Candidates</h2>
             <ol>
-                <li>B John Doe</li>
-                <li>B Peter Doe</li>
-                <li>B James Doe</li>
+                <li>B John Doe <button>vote</button></li>
+                <li>B Peter Doe <button>vote</button></li>
+                <li>B James Doe <button>vote</button></li>
             </ol>
-        </details >
-        <details >
-            <summary>C Office</summary>
-            <h2>Candidates</h2>
-            <ol>
-                <li>C John Doe</li>
-                <li>C Peter Doe</li>
-                <li>C James Doe</li>
-            </ol>
-        </details >
+        </details>
     </ul>
     </main>
     <div class="col-2"></div>
