--- a/UI/user/index.html
+++ b/UI/user/index.html
@@ -14,7 +14,7 @@
         <ul>
             <li class="li"><a href="./candidates.html">Candidates</a></li>
             <li class="active li"><a href="./index.html">All political Parties</a></li>
-            <li class="li"><a href="#">Vote</a></li>
+            <li class="li"><a href="./vote.html">Vote</a></li>
             <li class="li"><a href="#">Pofile</a></li>
         </ul>
     </nav>
