--- a/UI/user/candidates.html
+++ b/UI/user/candidates.html
@@ -15,9 +15,10 @@
             <li class="active li"><a href="./candidates.html">Candidates</a></li>
             <li class="li"><a href="./index.html">All political Parties</a></li>
             <li class="li"><a href="./vote.html">Vote</a></li>
-            <li class="li"><a href="#">Pofile</a></li>
+            <li class="li"><a href="./profile.html">Profile</a></li>
         </ul>
     </nav>
+    <center>
     <ul>
         <details >
             <summary>A Office</summary>
@@ -47,6 +48,7 @@
             </ol>
         </details >
     </ul>
+    </center>
     </main>
     <div class="col-2"></div>
 </body>
