--- a/UI/user/index.html
+++ b/UI/user/index.html
@@ -15,38 +15,40 @@
             <li class="li"><a href="./candidates.html">Candidates</a></li>
             <li class="active li"><a href="./index.html">All political Parties</a></li>
             <li class="li"><a href="./vote.html">Vote</a></li>
-            <li class="li"><a href="#">Pofile</a></li>
+            <li class="li"><a href="./profile.html">Profile</a></li>
         </ul>
     </nav>
-    <ul>
-        <details >
-            <summary>A party</summary>
-            <h2>Members</h2>
-            <ol>
-                <li>A John Doe</li>
-                <li>A Peter Doe</li>
-                <li>A James Doe</li>
-            </ol>
-        </details >
-        <details >
-            <summary>B party</summary>
-            <h2>Members</h2>
-            <ol>
-                <li>B John Doe</li>
-                <li>B Peter Doe</li>
-                <li>B James Doe</li>
-            </ol>
-        </details >
-        <details >
-            <summary>C party</summary>
-            <h2>Members</h2>
-            <ol>
-                <li>C John Doe</li>
-                <li>C Peter Doe</li>
-                <li>C James Doe</li>
-            </ol>
-        </details >
-    </ul>
+    <center>
+        <ul>
+            <details >
+                <summary>A party</summary>
+                <h2>Members</h2>
+                <ol>
+                    <li>A John Doe</li>
+                    <li>A Peter Doe</li>
+                    <li>A James Doe</li>
+                </ol>
+            </details >
+            <details >
+                <summary>B party</summary>
+                <h2>Members</h2>
+                <ol>
+                    <li>B John Doe</li>
+                    <li>B Peter Doe</li>
+                    <li>B James Doe</li>
+                </ol>
+            </details >
+            <details >
+                <summary>C party</summary>
+                <h2>Members</h2>
+                <ol>
+                    <li>C John Doe</li>
+                    <li>C Peter Doe</li>
+                    <li>C James Doe</li>
+                </ol>
+            </details >
+        </ul>
+    </center>
     </main>
     <div class="col-2"></div>
 </body>
