Admin can register new political party [delivers 163549757]

--- a/UI/admin/register.html
+++ b/UI/admin/register.html
@@ -13,8 +13,8 @@
     <nav>
         <ul>
             <li class="li"><a href="./edit.html">Edit Party</a></li>
-            <li class="active li"><a href="./index.html">Register Govt Office</a></li>
-            <li class="li"><a href="./register.html">Register Party</a></li>
+            <li class="li"><a href="./index.html">Register Govt Office</a></li>
+            <li class="active li"><a href="./register.html">Register Party</a></li>
             <li class="li"><a href="./delete.html">Delete Party</a></li>
         </ul>
     </nav>
@@ -24,7 +24,7 @@
             <form>
                 <label class="label" for="input">Name</label>
                 <input class="input" type="text" id="name" placeholder="name" required>
-                <button>Register Government Office</button>
+                <button>Register Politicial Party</button>
                 </form>   
         </main>
     <div class="col-2"></div>
