Admin can edit  political party information [delivers 163549905]

--- a/UI/admin/edit.html
+++ b/UI/admin/edit.html
@@ -25,6 +25,9 @@
             <form>
                 <label class="label" for="input">Name</label>
                 <input class="input" type="text" id="name" value="Political Party A" placeholder="name" required>
+                <label class="label" for="input">Contract</label>
+                <input class="input" type="text" id="contract" value="+254729443212" placeholder="PhoneNo" required>
+                
                 <button>Save Changes</button>
                 </form>   
         </main>
