Politician  can vie for government office  [delivers 163550369]

--- a/UI/admin/edit.html
+++ b/UI/admin/edit.html
@@ -29,6 +29,9 @@
                 <input class="input" type="text" id="contract" value="+254729443212" placeholder="PhoneNo" required>
                 
                 <button>Save Changes</button>
+                <details>
+                        <a href="../index.html" class="btn">Logout</a>
+                </details>
                 </form>   
         </main>
     <div class="col-2"></div>
