--- a/UI/politician/index.html
+++ b/UI/politician/index.html
@@ -12,21 +12,16 @@
 <body>
     <nav>
         <ul>
-            <li class="li"><a href="./candidates.html">Candidates</a></li>
-            <li class="li"><a href="./index.html">All political Parties</a></li>
-            <li class="li"><a href="./vote.html">Vote</a></li>
-            <li class="active li"><a href="./profile.html">Profile</a></li>
+            <li class="active li"><a href="./index.html">vie</a></li>
+            <li class="li"><a href="./petition.html">petition</a></li>
         </ul>
     </nav>
     <center>
     <ul>
-        <h2>Vote summary</h2>
-        <li>Office A - A John Doe </li>
-        <li>Office B - C John Doe </li>
-        <li>Office C - A John Doe </li>
-        <li>Office D - D John Doe </li>
+        <li>Office A <button>vie</button></li>
+        <li>Office B <button>vie</button></li>
+        <li>Office C <button>vie</button></li>
     </ul>
-    <a href="../index.html" class="btn">Logout</a>
     </center>
     </main>
     <div class="col-2"></div>
