politician can create a petition against a concluded political office election [delivers 163663244]

--- a/UI/politician/index.html
+++ b/UI/politician/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>User</title>
+    <title>Politician</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/forms.css">
     <link rel="stylesheet" href="../css/main.css">
@@ -23,6 +23,9 @@
         <li>Office C <button>vie</button></li>
     </ul>
     </center>
+    <details>
+            <a href="../index.html" class="btn">Logout</a>
+    </details>
     </main>
     <div class="col-2"></div>
 </body>
