[Feature #163549986] fix merge issues

--- a/UI/admin/home.html
+++ b/UI/admin/home.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/grid.css">
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/list.css">
-    <link rel="stylesheet" href="../css/modal.css">
+    <link rel="stylesheet" href="../css/modals.css">
     <title>Admin</title>
 </head>
 <body>
@@ -67,6 +67,6 @@
         <button onclick="confirm()">confirm</button>
         <button onclick="cancel()">cancel</button>
     </div> 
-    <script src="../js/modal.js"></script>  
+    <script src="../js/box.js"></script>  
 </body>
 </html>
