[finishes #163549757] admin can register new political party

--- a/UI/admin/edit-party.html
+++ b/UI/admin/edit-party.html
@@ -27,7 +27,8 @@
 
         <nav class="menu">
             <a href="./home.html">Home</a>
-            <a href="./register.html">Register office</a>
+            <a href="./register-party.html">Register party</a>
+            <a href="./register-office.html">Register office</a>
             <a href="../index.html">Logout</a>
             <input type="checkbox" id="chk">
             <label for="chk">
@@ -37,6 +38,7 @@
         </nav>
     </header> 
     <div class="content">
+        <center>
         <h3>Edit: Political Party A</h3>
             <form id="form">
                 <label class="label" for="input">ID</label>
@@ -44,11 +46,9 @@
                     
                 <label class="label" for="input">Name</label>
                 <input class="input" type="text" id="name" value="Political Party A" placeholder="name" required>
-                <label class="label" for="input">Contract</label>
-                <input class="input" type="text" id="contract" value="+254729443212" placeholder="PhoneNo" required>
-
                 <button onclick="form_open_modal()">Save Changes</button>
-            </form>   
+            </form>
+        </center>  
     </div>
     <!-- The Modal -->
     <div id="myModal" class="modal">
