--- a/UI/admin/register-party.html
+++ b/UI/admin/register-party.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/grid.css">
     <link rel="stylesheet" href="../css/nav.css">
-    <link rel="stylesheet" href="../css/list.css">
+    <link rel="stylesheet" href="../css/forms.css">
     <link rel="stylesheet" href="../css/modals.css">
     <title>Admin</title>
 </head>
@@ -26,7 +26,7 @@
         </label>
 
         <nav class="menu">
-            <a href="./index.html">Home</a>
+            <a href="./home.html">Home</a>
             <a href="./register-party.html">Register party</a>
             <a href="./register-office.html">Register office</a>
             <a href="../index.html">Logout</a>
@@ -38,37 +38,30 @@
         </nav>
     </header> 
     <div class="content">
-        <ul>
-            <li>Political party A
-                <div class="list-btn">
-                    <button onclick="goto_admin_edit()" class="btn-primary">edit</button>
-                    <button onclick="open_modal()" class="btn-danger">delete</button>
-                </div>
-            </li>
-            <li>Political party B
-                <div class="list-btn">
-                    <button onclick="goto_admin_edit()" class="btn-primary">edit</button>
-                    <button onclick="open_modal()" class="btn-danger">delete</button>
-                </div>
-            </li>
-            <li>Political party C
-                <div class="list-btn">
-                    <button onclick="goto_admin_edit()" class="btn-primary">edit</button>
-                    <button onclick="open_modal()" class="btn-danger">delete</button>
-                </div>
-            </li>
-        </ul>
+        <center>
+        <h3>Register: Political Party A</h3>
+            <form id="form">
+                  <label class="label" for="input">Name</label>
+                <input class="input" type="text" id="name"  placeholder="name" >
+                <label class="label" for="input">Address</label>
+                <input class="input" type="text" id="name"  placeholder="address" >
+                <label class="label" for="input">logourl</label>
+                <input class="input" type="text" id="name"  placeholder="logourl" >
+
+               <button onclick="form_open_modal()">Save Changes</button>
+            </form>
+        </center>  
     </div>
     <!-- The Modal -->
     <div id="myModal" class="modal">
         <!-- Modal content -->
         <div class="modal-content">
         <span class="close">&times;</span>
-        <h3>Are you sure you want to delete political party?</h3>
-        <button onclick="confirm()">confirm</button>
+        <h3>Are you sure you want register political party?</h3>
+        <button onclick="goto_admin_home()">confirm</button>
         <button onclick="cancel()">cancel</button>
     </div> 
-    <script src="../js/box.js"></script> 
+    <script src="../js/box.js"></script>
     <script src="../js/routes.js"></script> 
 </body>
 </html>
