[Delivers #163550587] citizen can view all political office

--- a/UI/citizen/political-office.html
+++ b/UI/citizen/political-office.html
@@ -29,7 +29,7 @@
             <a href="./index.html">Vote</a>
             <a href="./vote-summary.html">vote summary</a>
             <a href="./political-parties.html">Political party</a>
-            <a href="./political-office.html">Political Office</a>
+            <a href="./politcal-office.html">Political Office</a>
             <a href="../index.html">Logout</a>
             <input type="checkbox" id="chk">
             <label for="chk">
@@ -41,12 +41,16 @@
     <div class="content">
         <ul>
             <li>
-                <h3>political party A</h3>
-                <img src="https://via.placeholder.com/150">
+                <h3>woman rep</h3>
+                <span>county government</span>
             </li>
             <li>
-                <h3>political party B</h3>
-                <img src="https://via.placeholder.com/150">
+                <h3>Governor</h3>
+                <span>county government</span>
+            </li>
+            <li>
+                <h3>Member of national Assembly</h3>
+                <span>national government</span>
             </li>
 
         </ul>
