[Delivers #163550986] citizen can view votes cast summary

--- a/UI/citizen/vote-summary.html
+++ b/UI/citizen/vote-summary.html
@@ -39,7 +39,7 @@
         </nav>
     </header> 
     <div class="content">
-            <h3>Election Results</h3>
+            <h3>Votes Cast Summary</h3>
             <ul>
                 <li>
                     <h5>Presidential Candidate</h5>
