--- a/UI/citizen/vote-summary.html
+++ b/UI/citizen/vote-summary.html
@@ -29,7 +29,7 @@
             <a href="./index.html">Vote</a>
             <a href="./vote-summary.html">vote summary</a>
             <a href="./political-parties.html">Political party</a>
-            <a href="./politcal-office.html">Political Office</a>
+            <a href="./political-office.html">Political Office</a>
             <a href="../index.html">Logout</a>
             <input type="checkbox" id="chk">
             <label for="chk">
