[Finishes #163864664] Updates User interface form and radio btn to select box

--- a/UI/admin/register-party.html
+++ b/UI/admin/register-party.html
@@ -45,9 +45,12 @@
                 <input class="input" type="text" id="name"  placeholder="name" >
                 <label class="label" for="input">Address</label>
                 <input class="input" type="text" id="address"  placeholder="address" >
-                <label class="label" for="input">logourl</label>
-                <input class="input" type="text" id="logourl"  placeholder="logourl" >
-
+                <label class="label" for="input">logo</label>
+                <div class="row">
+                    <div class="col-5"></div>
+                    <input class="col-4" type="file" name="pic" accept="image/*">
+                    <div class="col-3"></div>
+                </div>
                <button onclick="form_open_modal()">Save Changes</button>
             </form>
         </center>  
