--- a/UI/citizen/index.html
+++ b/UI/citizen/index.html
@@ -29,7 +29,7 @@
             <a href="./index.html">Vote</a>
             <a href="./vote-summary.html">vote summary</a>
             <a href="./political-parties.html">Political party</a>
-            <a href="./politcal-office.html">Political Office</a>
+            <a href="./political-office.html">Political Office</a>
             <a href="../index.html">Logout</a>
             <input type="checkbox" id="chk">
             <label for="chk">
@@ -44,64 +44,31 @@
             <div>
                 <p>Presidential Candidate:</p>
                 <br />
-                <div>
-                    <input
-                        type="radio"
-                        name="Presidential Candidate"
-                        value="Candidate 1"
-                    />Candidate 1<br />
-                    <input
-                        type="radio"
-                        name="Presidential Candidate"
-                        value="Candidate 2"
-                    />Candidate 2<br />
-                    <input
-                        type="radio"
-                        name="Presidential Candidate"
-                        value="Candidate 3"
-                    />Candidate 3<br />
-                    </div>
-                <br />
-        
+                <select>
+                    <option value="">Candidate 1</option>
+                    <option value="">Candidate 2</option>
+                    <option value="">Candidate 3</option>
+                </select>
+                <br>
+                <br/>
                 <p>Governatorial Candidate:</p>
                 <br />
-                <div>
-                  <input
-                    type="radio"
-                    name="Governatorial Candidate"
-                    value="Candidate 1"
-                    />Candidate 1<br />
-                  <input
-                    type="radio"
-                    name="Governatorial Candidate"
-                    value="Candidate 2"
-                    />Candidate 2<br />
-                  <input
-                    type="radio"
-                    name="Governatorial Candidate"
-                    value="Candidate 3"
-                    />Candidate 3<br />
-                </div>
-                <br />
+                <select>
+                    <option value="">Candidate 1</option>
+                    <option value="">Candidate 2</option>
+                    <option value="">Candidate 3</option>
+                </select>
+                <br/>
+                <br/>
                 <p>Women Representative:</p>
                 <br />
-                <div>
-                  <input
-                    type="radio"
-                    name="Women Representative"
-                    value="Candidate 1"
-                    />Candidate 1<br />
-                  <input
-                    type="radio"
-                    name="Women Representative"
-                    value="Candidate 2"
-                    />Candidate 2<br />
-                  <input
-                    type="radio"
-                    name="Women Representative"
-                    value="Candidate 3"
-                    />Candidate 3<br />
-                </div>
+                <select>
+                    <option value="">Candidate 1</option>
+                    <option value="">Candidate 2</option>
+                    <option value="">Candidate 3</option>
+                </select>
+                <br>
+                <br />
                 <button onclick="open_modal()">Cast Vote</button>
         </center>
     </div>
